--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>official_website</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
+    <title>井欢个人网站</title>
   </head>
   <body>
     <div id="app"></div>
