--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> 
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
     <title>个人网站</title>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script>
+      var a = document.documentElement.clientWidth
+      console.log(a)
+    </script>
   </body>
 </html>
