--- a/index.html
+++ b/index.html
@@ -8,15 +8,45 @@
     <style>
       body{
         /* background: red; */
+
       }
+      @keyframes jumping {
+        0%    {transform:scale(1.5);}
+        100%  {transform:scale(0.8);}
+      }
+      @keyframes line {
+        0%    {stroke-dashoffset:0}
+        100%    {stroke-dashoffset:100%}
+      }
+    #firstDot{
+      animation: jumping 0.5s ease-in-out alternate infinite;
+    }
+    .line {
+      z-index:10;
+      stroke: rgba(46, 204, 113,1.0);
+      stroke-width:.6;
+      stroke-dasharray: 2 16;
+      animation: line 300s linear infinite;
+    }
+    .dotted{
+      stroke:black;
+      width: 10px;
+      height: 10px;
+      fill: rgba(241, 196, 15,1.0);
+    }
+    .dotted:hover{
+      cursor: pointer;
+      transform: scale(2);
+      transition: .6s;
+    }
+
     </style>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <script>
-      // var a = document.documentElement.clientWidth
-      // console.log(a)
+      
     </script>
   </body>
 </html>
