--- a/index.html
+++ b/index.html
@@ -35,13 +35,28 @@
         transform: scale(2);
         transition: .6s;
       }
+      
     </style>
-    <script>
-    </script>
   </head>
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
-
+    <script>(function(T,h,i,n,k,P,a,g,e){g=function(){P=h.createElement(i);a=h.getElementsByTagName(i)[0];P.src=k;P.charset="utf-8";P.async=1;a.parentNode.insertBefore(P,a)};T["ThinkPageWeatherWidgetObject"]=n;T[n]||(T[n]=function(){(T[n].q=T[n].q||[]).push(arguments)});T[n].l=+new Date();if(T.attachEvent){T.attachEvent("onload",g)}else{T.addEventListener("load",g,false)}}(window,document,"script","tpwidget","//widget.seniverse.com/widget/chameleon.js"))</script>
+<script>tpwidget("init", {
+    "flavor": "bubble",
+    "location": "YB1UX38K6DY1",
+    "geolocation": "enabled",
+    "position": "top-right",
+    "margin": "10px 10px",
+    "language": "zh-chs",
+    "unit": "c",
+    "theme": "chameleon",
+    "uid": "U0F8A74305",
+    "hash": "757aebed6514df6337bc24448bd18101"
+});
+tpwidget("show");
+</script>
+<script>
+  
+</script>
   </body>
 </html>
