更新天气、日期、鼠标移动跟随

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no" >
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+    <script src="static/qin.js"></script>
     <title>个人网站</title>
     <style>
       @keyframes jumping {
@@ -54,9 +56,6 @@
     "hash": "757aebed6514df6337bc24448bd18101"
 });
 tpwidget("show");
-</script>
-<script>
-  
 </script>
   </body>
 </html>
