--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
         transform: scale(2);
         transition: .6s;
       }
-      
+      .ant-collapse > .ant-collapse-item > .ant-collapse-header{
+    color: rgba(255, 255, 255, 1) !important;
+  }
+  .ant-collapse-content{
+    background-color: rgba(51, 51, 51,1) !important;
+  }
     </style>
   </head>
   <body>
