mac change windows for company

--- a/index.html
+++ b/index.html
@@ -43,6 +43,25 @@
   .ant-collapse-content{
     background-color: rgba(51, 51, 51,1) !important;
   }
+  .el-dialog{
+  max-height: 600px !important;
+  overflow-y: auto !important;
+}
+.el-slider__button {
+      width: 60px !important;
+      height: 60px !important;
+      border:none !important;
+      background-color: #fff !important;
+      border-radius: 50% !important;
+      background:url('static/sicong.jpg');
+      background-size: cover;
+      background-repeat: no-repeat;
+    }
+     .el-slider__button-wrapper {
+      height: 60px !important;
+      width: 60px !important;
+      top: -26px !important; 
+    }
     </style>
   </head>
   <body>
